Reorganized classes under merge and renamed some classes